# Sokoban

./: .gitignore  agent.py  level.py  pyproject.toml  readme.md  sokoban.py  train.py
levels/: level0.json  level1.json  level2.json  level3.json  level4.json  level5.json  microban_0.json  microban_1.json  microban_2.json  microban_3.json  microban_4.json  microban_5.json  microban_6.json  microban_7.json  microban_8.json  microban_9.json  microban_simple.json
