[tool.poetry]
name = "sokoban"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10"
pygame = "^2.1.2"
numpy = "^1.22.3"
tensorflow = "^2.9.1"
tqdm = "^4.64.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
